[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "llm-nexus"
version = "1.0.12"
description = "Unified interface for multiple LLM providers: Anthropic, OpenAI, Groq, and HuggingFace"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-FedEx-Express-Proprietary"
authors = [
    { name = "Alireza Asadi", email = "alireza.asadi@fedex.com" },
]
maintainers = [
    { name = "Alireza Asadi", email = "alireza.asadi@fedex.com" },
]
keywords = [
    "llm",
    "ai",
    "anthropic",
    "openai",
    "groq",
    "huggingface",
    "claude",
    "gpt",
    "langchain",
    "multi-provider",
    "unified-interface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "tomli_w",
    "urllib3",
    "python-dotenv",
    "anthropic",
    "openai",
    "huggingface",
    "sentence-transformers",
    "langchain-huggingface",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-google-vertexai",
    "langchain-google-genai",
    "vertexai",
    "langchain-groq",
    "torch",
    "transformers",
    "pillow",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.18.0",
    "langchain-anthropic>=0.1.0",
]
vertex = [
    "google-cloud-aiplatform>=1.38.0",
    "langchain-google-vertexai>=0.1.0",
]
openai = [
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
]
groq = [
    "langchain-groq>=0.1.0",
]
huggingface = [
    "langchain-huggingface>=0.0.1",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.0.0",
]
google-genai = [
    "langchain-google-genai>=0.1.0",
]
embeddings = [
    "langchain-community>=0.1.0",
    "langchain-chroma>=0.1.0",
    "sentence-transformers>=2.0.0",
]
http = [
    "httpx>=0.24.0",
]
all = [
    "llm-nexus[anthropic,vertex,openai,groq,huggingface,google-genai,embeddings,http]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/alireza-asadi_fedex/llm-nexus"
Documentation = "https://github.com/alireza-asadi_fedex/llm-nexus#readme"
Repository = "https://github.com/alireza-asadi_fedex/llm-nexus"
Issues = "https://github.com/alireza-asadi_fedex/llm-nexus/issues"
Changelog = "https://github.com/alireza-asadi_fedex/llm-nexus/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = [
    "llm_nexus",
    "llm_nexus.anthropic_llm",
    "llm_nexus.anthropic_vertex",
    "llm_nexus.embeddings",
    "llm_nexus.groq",
    "llm_nexus.huggingface",
    "llm_nexus.open_ai",
]

[tool.setuptools.package-data]
llm_nexus = [
    "py.typed",
]

[tool.black]
line-length = 100
target-version = [
    "py310",
    "py311",
    "py312",
]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = "-v --cov=llm_nexus --cov-report=term-missing"
