[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-llm-wrapper"
version = "1.0.0"
description = "Unified AI/LLM provider wrapper supporting Anthropic, OpenAI, Groq, and HuggingFace"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "llm", "anthropic", "openai", "groq", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies required for basic functionality
dependencies = [
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Anthropic support (both direct and Vertex AI)
anthropic = [
    "anthropic>=0.18.0",
    "langchain-anthropic>=0.1.0",
]

# Vertex AI support (includes Google Cloud integration)
vertex = [
    "google-cloud-aiplatform>=1.38.0",
    "langchain-google-vertexai>=0.1.0",
]

# OpenAI support
openai = [
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
]

# Groq support
groq = [
    "langchain-groq>=0.1.0",
]

# HuggingFace support
huggingface = [
    "langchain-huggingface>=0.0.1",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.0.0",
]

# Google Generative AI support
google-genai = [
    "langchain-google-genai>=0.1.0",
]

# Embedding models support
embeddings = [
    "langchain-community>=0.1.0",
    "langchain-chroma>=0.1.0",
    "sentence-transformers>=2.0.0",
]

# HTTP client support (optional, for SSL bypass scenarios)
http = [
    "httpx>=0.24.0",
]

# Full installation with all providers
all = [
    "ai-llm-wrapper[anthropic,vertex,openai,groq,huggingface,google-genai,embeddings,http]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-llm-wrapper"
Documentation = "https://github.com/yourusername/ai-llm-wrapper#readme"
Repository = "https://github.com/yourusername/ai-llm-wrapper"
Issues = "https://github.com/yourusername/ai-llm-wrapper/issues"

[tool.setuptools]
packages = ["ai"]

[tool.setuptools.package-data]
ai = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
